--- a/faq.html
+++ b/faq.html
@@ -47,7 +47,7 @@
         <h2>Frequently Asked Questions</h2>
      </section>
 
-        
+        <center>
         <details>
           <summary>How can you book a project space in one of the wings?</summary>
           <p>
@@ -128,7 +128,9 @@
             HZ parking lot and park there.</section>
           </p>
         </details>
+        </center>
         </section>
+  
       
 
     </div>
