--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
             <h2> Study Choice</h2>
           </legend>
           <div class="image">
-            <img src="Img/ICT.jpg" alt="Your Profile Image" width="300" height="150">
+            <img src="img/ict.jpg" alt="Your Profile Image" width="300" height="150">
           </div>
           <p>I have a strong interest in both psychology and IT, with psychology being a personal hobby that I intend to
             continue exploring. However, I ultimately chose ICT (IT) because I've always been curious about how software
