--- a/post.html
+++ b/post.html
@@ -35,8 +35,9 @@
             <h2> Study Choice</h2>
           </legend>
           <div class="image">
-            <img src="img/ict.jpg" alt="Your Profile Image" width="300" height="150">
+            <img src="img/ict.jpg" alt="Image" width="300" height="150">
           </div>
+          <section>
           <p>I have a strong interest in both psychology and IT, with psychology being a personal hobby that I intend to
             continue exploring. However, I ultimately chose ICT (IT) because I've always been curious about how software
             and computers work, desiring to comprehend the 'behind-the-screen' processes and the functionality of
@@ -62,6 +63,7 @@
             harmonizing my passion for understanding the 'behind-the-screen' processes with my curiosity about the human
             mind, I aim to make a meaningful impact on the digital landscape and contribute to the betterment of society
             through technology.</p>
+          </section>
         </fieldset>
       </article>
     </section>
